--- a/null-2020.github.io/my-app/package.json
+++ b/null-2020.github.io/my-app/package.json
@@ -11,8 +11,6 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "bootstrap": "^5.2.0",
-    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -46,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "bootstrap": "^5.2.0",
+    "gh-pages": "^4.0.0",
+    "node-sass": "^7.0.1"
   }
 }
